updated code backend

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MONGO_URI=mongodb+srv://ravandurustores:ravandurustores@cluster0.6xdcaku.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_secret_key_here
 
+PHONEPE_CLIENT_ID=SU2509151820275033829166
+PHONEPE_CLIENT_SECRET=89f620cd-3a66-4494-86ae-92601c2d67db
+PHONEPE_CLIENT_VERSION=1
+PHONEPE_API_URL=https://api.phonepe.com/apis/pg
